--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "description": "Replace ${variables} in text with gobble",
   "author": "Rich Harris",
+  "license": "MIT",
+  "repository": "https://github.com/gobblejs/gobble-replace",
   "keywords": [
-    "gobble"
+    "gobble",
+    "gobble-plugin"
   ],
   "files": [
     "index.js"
